# usb_to_tty

./: .gitignore  CMakeLists.txt  notes.txt  run.sh
src/: dev_defs.h  helper.cpp  helper.h  main.cpp  usb.cpp  usb.h
